--- a/Product Page/package.json
+++ b/Product Page/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.25.2",
+    "@clerk/themes": "^2.2.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-just-parallax": "^3.1.16",
