--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.14",
     "@tremor/react": "^3.18.7",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
