--- a/Product Page/package.json
+++ b/Product Page/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brainwave",
+  "name": "air-wall",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,10 +12,11 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.25.2",
     "@clerk/themes": "^2.2.29",
+    "lucide-react": "^0.488.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-just-parallax": "^3.1.16",
-    "react-router-dom": "^6.22.1",
+    "react-router-dom": "^6.30.0",
     "scroll-lock": "^2.1.5",
     "sweetalert2": "^11.17.2"
   },
